--- a/tox.ini
+++ b/tox.ini
@@ -21,5 +21,5 @@ deps =
 ;     -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir}
+    pytest --ignore=setup.py --basetemp={envtmpdir}
 
